# mvc_postos

./: README.md  pyproject.toml  requirements.txt  setup.py
src/: main.py
src/controllers/: posto_controller.py
src/models/: posto_model.py
src/tests/: conftest.py  test_posto_controller.py  test_posto_model.py
src/views/: posto_view.py
tests/: test_posto_controller.py  test_posto_model.py
