[tool.poetry]
name = "mvc_postos"
version = "0.1.0"
description = "Sistema de ranking de postos de gasolina."
authors = ["Bruno Carrara <brunocarrarabpc@gmail.com>"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = ["test_*.py"]
